--- a/RickAndMortySolution/RickAndMorty/AppShell.xaml
+++ b/RickAndMortySolution/RickAndMorty/AppShell.xaml
@@ -7,7 +7,6 @@
     FlyoutHeaderBehavior="CollapseOnScroll">
 
     <ShellContent Title="Home" ContentTemplate="{DataTemplate pages:MainPage}" Route="MainPage" />
-    <ShellContent Title="Characters" ContentTemplate="{DataTemplate pages:CharacterPage}" Route="CharacterPage" />
-    <ShellContent Title="Details" ContentTemplate="{DataTemplate pages:DetailsCharacterPage}" Route="DetailsCharacterPage" />
+    <ShellContent Title="Characters" ContentTemplate="{DataTemplate pages:CharacterPage}" />
 
 </Shell>
