--- a/RickAndMortySolution/RickAndMorty/Views/CharacterPage.xaml
+++ b/RickAndMortySolution/RickAndMorty/Views/CharacterPage.xaml
@@ -10,7 +10,7 @@
           RowSpacing="0">
 
         <CollectionView BackgroundColor="Transparent"
-                        SelectionMode="Single"
+                        SelectionMode="None"
                         ItemsSource="{Binding Characters}">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
@@ -56,6 +56,8 @@
 
         <ActivityIndicator IsVisible="{Binding IsBusy}"
                            IsRunning="{Binding IsBusy}"
+                           HeightRequest="150"
+                           WidthRequest="150"
                            HorizontalOptions="FillAndExpand"
                            VerticalOptions="CenterAndExpand"/>
     </Grid>
