--- a/RickAndMortySolution/RickAndMorty/Views/DetailsCharacterPage.xaml
+++ b/RickAndMortySolution/RickAndMorty/Views/DetailsCharacterPage.xaml
@@ -32,12 +32,23 @@
                 <DataTemplate>
                     <Grid Padding="10">
                         <Frame HeightRequest="125" Padding="0">
-                            <VerticalStackLayout Margin="10,0,0,0" 
-                                                     Padding="10"
-                                                     VerticalOptions="Center">
-                                <Label Text="{Binding Code}"/>
-                                <Label Text="{Binding Name}"/>
-                                <Label Text="{Binding AirDate, StringFormat='{0:dd MMMM, yyyy}'}"/>
+                            <VerticalStackLayout Padding="10"
+                                                 VerticalOptions="Center">
+                                <HorizontalStackLayout>
+                                    <Label Text="Episode : "
+                                           FontAttributes="Bold"/>
+                                    <Label Text="{Binding Code}"/>
+                                </HorizontalStackLayout>
+                                <HorizontalStackLayout>
+                                    <Label Text="Name: "
+                                           FontAttributes="Bold"/>
+                                    <Label Text="{Binding Name}"/>
+                                </HorizontalStackLayout>
+                                <HorizontalStackLayout>
+                                    <Label Text="Air Date: "
+                                           FontAttributes="Bold"/>
+                                    <Label Text="{Binding AirDate, StringFormat='{0:MM/dd/yy}'}"/>
+                                </HorizontalStackLayout>
                             </VerticalStackLayout>
                         </Frame>
                     </Grid>
